blurry image fixes

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -110,6 +110,7 @@
 }
 
 .card-image {
+  height: 300px;
   width: 100%;
   object-fit: cover;
   border-top-left-radius: 16px;
