--- a/app/assets/stylesheets/components/_flex_box.scss
+++ b/app/assets/stylesheets/components/_flex_box.scss
@@ -8,3 +8,8 @@
   display: flex;
   justify-content: Space-between;
 }
+
+.show-container{
+  display: flex;
+  gap: 20px;
+}
