--- a/app/assets/stylesheets/components/_image.scss
+++ b/app/assets/stylesheets/components/_image.scss
@@ -2,3 +2,10 @@
   border-radius: 12px;
   box-shadow: 2px 2px 4px rgb(235, 235, 235);
 }
+
+.show-image {
+  border-radius: 16px;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
